# test

./: Dockerfile  README.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
test/: model.py
test/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
test/catboost_info/learn/: events.out.tfevents
test/notebooks/: notebook_model.ipynb
test/notebooks/catboost_info/: catboost_training.json  time_left.tsv
test/notebooks/catboost_info/learn/: events.out.tfevents
test/notebooks/catboost_info/test/: events.out.tfevents
