[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["maly <swampinhabitant@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
catboost = "^1.2.3"
scikit-learn = "^1.4.1.post1"
jupyter = "^1.0.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
